syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.concert";
option java_outer_classname = "ReservationProto";

service ReservationService {
  rpc AddShow(AddShowRequest) returns (AddShowResponse);
  rpc ReserveTicket(ReserveTicketRequest) returns (ReserveTicketResponse);
}

message AddShowRequest {
  string showName = 1;
  int32 concertSeats = 2;
  int32 afterPartyTickets = 3;
}

message AddShowResponse {
  string status = 1;
}

message ReserveTicketRequest {
  string showName = 1;
  bool includeAfterParty = 2;
}

message ReserveTicketResponse {
  string status = 1;
}
